Update demo title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>component-catalog</title>
+  <title>IA Components</title>
   <link rel="stylesheet" href="./demo/index.css" />
   <script type="module" src="/demo/app-root.ts"></script>
 </head>
