Update ghpages build config

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Internet Archive Elements</title>
   <link rel="stylesheet" href="./demo/index.css" />
-  <script type="module" src="/demo/app-root.ts"></script>
+  <script type="module" src="./demo/app-root.ts"></script>
 </head>
 
 <body>
